These are the changes for an implementation of HDBSCAN*

--- a/Clustering/pom.xml
+++ b/Clustering/pom.xml
@@ -29,6 +29,7 @@
     <modules>
         <module>Core</module>
         <module>KMeans</module>
+        <module>Hdbscan</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
